--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="row justify-content-center" id="createPro">
         <div class="col-12 col-md-4 col-xs-12 col-lg-3 m-auto border rounded col-center-block">
             <div >
-                <h2 class="text-center mt-3"><a href="#"><span class="large" id="loginText">登录</span></a>/<a href="#"><span id="regiText">注册</span></a></h2>
+<!--                <h2 class="text-center mt-3"><a href=""><span class="large" id="loginText">登录</span></a>-->
+<!--                    /<a href="#"><span id="regiText">注册</span></a></h2>-->
             </div>
             <form class="pt-5">
                 <label for="email">这里输入您的邮箱:</label>
@@ -44,7 +45,7 @@
                     <input type="password" class="form-control" placeholder="" id="password" name="password">
                 </div>
                 <div class="m-auto text-center p-3">
-                    <button class="btn btn-primary btn-lg" type="button" id="register" style="display:none">注 册</button>
+<!--                    <button class="btn btn-primary btn-lg" type="button" id="register" style="display:none">注 册</button>-->
                     <button class="btn btn-primary btn-lg" type="button" id="login" >登 录</button>
                 </div>
             </form>
