--- a/setTexts.html
+++ b/setTexts.html
@@ -80,7 +80,7 @@
 
         <div class="col-xs-12  col-md-8 m-auto">
             <div class="card mt-3">
-                <h5 class="card-header text-center bg-primary text-white">调查数据1.2（文本）</h5>
+                <h5 class="card-header text-center bg-primary text-white" id="title">调查数据</h5>
                 <div class="card-body  pre-scrollable" style="height: 60vh;">
                     <p id="content">
 
