对大屏进行加宽+跳转清空值+disabled

--- a/setTexts.html
+++ b/setTexts.html
@@ -78,8 +78,8 @@
             </ul>
         </div>
 
-        <div class="col-xs-12  col-md-8 m-auto">
-            <div class="card mt-3">
+        <div class="col-xs-12  col-md-9 m-auto" >
+            <div class="card mt-3" style="height: 60vh">
                 <h5 class="card-header text-center bg-primary text-white" id="title">调查数据</h5>
                 <div class="card-body  pre-scrollable" style="height: 60vh;">
                     <p id="content">
